--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Site settings
-title: Mauricio Urraco
-description: Jekyll Theme Minimal Resume
+title: Raphael Waldemar
+description: Meu cantinho
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Mauricio Urraco
-user_description: I'm a Software Engineer from Argentina, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Giving Circles working with Grapevine, a California based startup trying to improve the world through collaborative giving. I'm the first engineer they hired to work on the platform.
-user_title: Software Engineer
-email: mauriurraco@gmail.com
+username: Raphael Waldemar
+user_description: Profissional com sólida trajetória em liderança, gestão de pessoas e coordenação estratégica de times multidisciplinares, atuando na implantação e maturidade de PMO, governança de projetos e operações. Experiência na definição de metas, desenvolvimento de equipes, distribuição de atividades conforme capacidade técnica e condução de treinamentos, onboarding e planos de sucessão, fortalecendo competências e cultura organizacional. Forte atuação na gestão integrada de projetos e contratos, alinhamento com stakeholders, comunicação executiva e tomada de decisão orientada a indicadores. Histórico consistente na implementação de processos, frameworks e melhorias contínuas que elevam produtividade, reduzem retrabalho e garantem entregas com qualidade, compliance e foco no cliente. Liderança voltada para resultados, mediação de conflitos, organização operacional e evolução técnica e comportamental dos times. 
+user_title: Engenheiro | Projetos
+email: raphaelwdrf@gmail.com
 # twitter_username: lorem_ipsum
-instagram_username: mauriciourraco7
-facebook_username: mauricio.urraco
-linkedin_username: murraco
-github_username:  murraco
+#instagram_username: mauriciourraco7
+#facebook_username: mauricio.urraco
+linkedin_username: raphaelwdrf
+github_username:  raphaelwdrf
 # medium_username: lorem_ipsum
 # medium_url: lorem_ipsum.medium.com
 # gplus_username:  lorem_ipsum
